[package]
name = "todo_cli"
version = "0.1.0"
edition = "2021"
description = "A simple Rust-based CLI todo list"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
colored = "3.0"
chrono = { version = "0.4", features = ["serde"] }

